# Car_dealership

./: CMakeLists.txt  README.md  car.json  customer.json  identifier.sqlite  main.cpp
